--- a/vfb-reader/Cargo.toml
+++ b/vfb-reader/Cargo.toml
@@ -9,6 +9,11 @@ edition = "2021"
 categories = ["parsing"]
 readme = "README.md"
 
+[dependencies]
+hex = "0.4.3"
+serde = { version = "1.0.216", features = ["derive"] }
+serde_json = "1.0.133"
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 # Old stuff: Python bindings
