--- a/vfb-reader/Cargo.toml
+++ b/vfb-reader/Cargo.toml
@@ -11,6 +11,7 @@ readme = "README.md"
 
 [dependencies]
 hex = "0.4.3"
+phf = { version = "0.11.2", features = ["macros"] }
 serde = { version = "1.0.216", features = ["derive"] }
 serde_json = "1.0.133"
 
