--- a/vfb-reader/Cargo.toml
+++ b/vfb-reader/Cargo.toml
@@ -10,6 +10,7 @@ categories = ["parsing"]
 readme = "README.md"
 
 [dependencies]
+encoding_rs = "0.8.35"
 hex = "0.4.3"
 phf = { version = "0.11.3", features = ["macros"] }
 serde = { version = "1.0.218", features = ["derive"] }
