--- a/vfb-reader/Cargo.toml
+++ b/vfb-reader/Cargo.toml
@@ -15,5 +15,6 @@ hex = "0.4.3"
 phf = { version = "0.11.3", features = ["macros"] }
 serde = { version = "1.0.218", features = ["derive"] }
 serde_json = "1.0.139"
+thiserror = "2.0.12"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
