--- a/vfb-reader/Cargo.toml
+++ b/vfb-reader/Cargo.toml
@@ -16,5 +16,6 @@ thiserror = "2.0.12"
 phf = { version = "0.12.1", features = ["macros"] }
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
+vfb-macros = { path = "../vfb-macros" }
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
