--- a/vfb-reader/Cargo.toml
+++ b/vfb-reader/Cargo.toml
@@ -17,5 +17,6 @@ phf = { version = "0.12.1", features = ["macros"] }
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
 vfb-macros = { path = "../vfb-macros" }
+font-types = { version = "0.10.1", features = ["serde"] }
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
