--- a/vfb-reader/Cargo.toml
+++ b/vfb-reader/Cargo.toml
@@ -18,5 +18,6 @@ serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
 vfb-macros = { path = "../vfb-macros" }
 font-types = { version = "0.10.1", features = ["serde"] }
+bitflags = { version = "2.10.0", features = ["serde"] }
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
